trunk/Archive2/37/0331a191695ce8/output
main.cpp: In constructor 'Derived<F>::Derived()':
main.cpp:14:9: error: 'var' was not declared in this scope
         var<int,int,int>(1,2,3);
         ^
main.cpp:14:13: error: expected primary-expression before 'int'
         var<int,int,int>(1,2,3);
             ^
